--- a/index.html
+++ b/index.html
@@ -9,26 +9,239 @@
     <link rel="stylesheet" href="style.css" />
 
     <!--BOxicons link-->
-    <link href='https://unpkg.com/boxicons@2.1.4/css/boxicons.min.css' rel='stylesheet'>
+    <link
+      href="https://unpkg.com/boxicons@2.1.4/css/boxicons.min.css"
+      rel="stylesheet"
+    />
   </head>
   <body>
     <!--Navbar-->
-    <header>
-      <a href="" class="logo">
-        Profile <span>Page</span>
-      </a>
+    <header class="header">
+      <a href="#" class="logo"> Profile <span>Page</span> </a>
 
-      <i class='bx bx-menu'></i>
+      <i class="bx bx-menu" id="menu-bar"></i>
 
       <nav class="navbar">
-        <a href="">Home</a>
-        <a href="">about</a>
+        <a href="#home">Home</a>
+        <a href="#about">about</a>
         <a href="">Services</a>
-        <a href="">Projects</a>
-        <a href="">Contact</a>
+        <a href="#projects">Projects</a>
+        <a href="#contact">Contact</a>
       </nav>
 
       <button class="gradient-btn">Contact Me</button>
     </header>
+    <!--Home-->
+    <section class="Home" id="home">
+      <div class="home-content">
+        <h1>Hi, It's <span>Gokul</span></h1>
+        <h3>I'm a <span>Full Stack Developer</span></h3>
+        <p>
+          Lorem ipsum dolor sit amet consectetur adipisicing elit. Sed amet est
+          at blanditiis provident debitis voluptates corrupti a quod doloremque
+          unde, nulla aspernatur libero molestiae non ducimus doloribus rem,
+          corporis eveniet laudantium? Laborum autem voluptas dolor minus quae
+          illum officiis maxime est, impedit rerum ea eos, nesciunt eius nam
+          eveniet numquam, harum sunt. Dolores aperiam quisquam ea fuga optio
+          rem.
+        </p>
+
+        <div class="social-icons">
+          <a href="#">
+            <i class="bx bxl-github"></i>
+          </a>
+          <a href="#">
+            <i class="bx bxl-linkedin-square"></i>
+          </a>
+          <a href="#">
+            <i class="bx bxl-instagram-alt"></i>
+          </a>
+          <a href="#">
+            <i class="bx bxl-whatsapp"></i>
+          </a>
+        </div>
+
+        <div class="btn-group">
+          <a href="#" class="btn">Join</a>
+          <a href="#contact" class="btn-2">Contact</a>
+        </div>
+      </div>
+
+      <div class="home-img">
+        <img src="image/gokul2.jpg" alt="" />
+      </div>
+    </section>
+
+    <!--About-->
+    <section class="About" id="about">
+      <div class="about-img">
+        <img src="image/gokul2.jpg" alt="" />
+      </div>
+      <div class="about-content">
+        <h2>About <span>Me</span></h2>
+        <p>
+          Lorem ipsum, dolor sit amet consectetur adipisicing elit. Nihil, odio
+          laudantium minus soluta eaque eum rem sequi possimus fugiat qui facere
+          velit veritatis nesciunt cumque voluptate porro nostrum magni natus
+          incidunt optio itaque dignissimos illo atque! Quos nemo esse similique
+          cum blanditiis inventore commodi sit, iure unde soluta repellat
+          mollitia amet fugit sed nobis ullam eius dolorum id eum consequuntur?
+        </p>
+        <a href="" class="btn">Read More</a>
+      </div>
+    </section>
+    <!--projects-->
+    <section class="projects" id="projects">
+      <h2 class="heading">Projects</h2>
+      <div class="projects-box">
+        <div class="project-card">
+          <img src="image/Screenshot 2024-08-28 145445.png" alt="" />
+          <h3>Project -1</h3>
+          <p>
+            Lorem ipsum dolor sit amet consectetur adipisicing elit. Illum esse
+            maiores saepe veritatis magnam. Blanditiis nihil necessitatibus
+            incidunt, molestias magni iure officiis vitae adipisci provident
+            ullam autem possimus, voluptas perferendis reiciendis, reprehenderit
+            aliquam tenetur. Fugit commodi possimus alias necessitatibus ullam.
+          </p>
+          <div class="btn">
+            <a href="https://cssgradient.io/">Review Project</a>
+          </div>
+        </div>
+
+        <div class="project-card">
+          <img src="image/Screenshot 2024-08-28 145613.png" alt="" />
+          <h3>Project -1</h3>
+          <p>
+            Lorem ipsum dolor sit amet consectetur adipisicing elit. Illum esse
+            maiores saepe veritatis magnam. Blanditiis nihil necessitatibus
+            incidunt, molestias magni iure officiis vitae adipisci provident
+            ullam autem possimus, voluptas perferendis reiciendis, reprehenderit
+            aliquam tenetur. Fugit commodi possimus alias necessitatibus ullam.
+          </p>
+          <div class="btn">
+            <a href="https://cssgradient.io/">Review Project</a>
+          </div>
+        </div>
+
+        <div class="project-card">
+          <img src="image/Screenshot 2024-08-28 150953.png" alt="" />
+          <h3>Project -1</h3>
+          <p>
+            Lorem ipsum dolor sit amet consectetur adipisicing elit. Illum esse
+            maiores saepe veritatis magnam. Blanditiis nihil necessitatibus
+            incidunt, molestias magni iure officiis vitae adipisci provident
+            ullam autem possimus, voluptas perferendis reiciendis, reprehenderit
+            aliquam tenetur. Fugit commodi possimus alias necessitatibus ullam.
+          </p>
+          <div class="btn">
+            <a href="https://cssgradient.io/">Review Project</a>
+          </div>
+        </div>
+
+        <div class="project-card">
+          <img src="image/Screenshot 2024-08-28 152335.png" alt="" />
+          <h3>Project -1</h3>
+          <p>
+            Lorem ipsum dolor sit amet consectetur adipisicing elit. Illum esse
+            maiores saepe veritatis magnam. Blanditiis nihil necessitatibus
+            incidunt, molestias magni iure officiis vitae adipisci provident
+            ullam autem possimus, voluptas perferendis reiciendis, reprehenderit
+            aliquam tenetur. Fugit commodi possimus alias necessitatibus ullam.
+          </p>
+          <div class="btn">
+            <a href="https://cssgradient.io/">Review Project</a>
+          </div>
+        </div>
+
+        <div class="project-card">
+          <img src="image/Screenshot 2024-08-28 152446.png" alt="" />
+          <h3>Project -1</h3>
+          <p>
+            Lorem ipsum dolor sit amet consectetur adipisicing elit. Illum esse
+            maiores saepe veritatis magnam. Blanditiis nihil necessitatibus
+            incidunt, molestias magni iure officiis vitae adipisci provident
+            ullam autem possimus, voluptas perferendis reiciendis, reprehenderit
+            aliquam tenetur. Fugit commodi possimus alias necessitatibus ullam.
+          </p>
+          <div class="btn">
+            <a href="https://cssgradient.io/">Review Project</a>
+          </div>
+        </div>
+
+        <div class="project-card">
+          <img src="image/Screenshot 2024-08-28 152557.png" alt="" />
+          <h3>Project -1</h3>
+          <p>
+            Lorem ipsum dolor sit amet consectetur adipisicing elit. Illum esse
+            maiores saepe veritatis magnam. Blanditiis nihil necessitatibus
+            incidunt, molestias magni iure officiis vitae adipisci provident
+            ullam autem possimus, voluptas perferendis reiciendis, reprehenderit
+            aliquam tenetur. Fugit commodi possimus alias necessitatibus ullam.
+          </p>
+          <div class="btn">
+            <a href="https://cssgradient.io/">Review Project</a>
+          </div>
+        </div>
+      </div>
+    </section>
+    <!--Contact-->
+    <section class="contact" id="contact">
+      <h2 class="heading">Contact <span>Me</span></h2>
+
+      <form>
+        <div class="input-group">
+          <div class="input-box">
+            <input type="text" placeholder="Full Name" />
+            <input type="email" placeholder="Email" />
+          </div>
+          <div class="input-box">
+            <input type="number" placeholder="Phonenumber" />
+            <input type="text" placeholder="Sublect" />
+          </div>
+        </div>
+        <div class="input-group-2">
+          <textarea name="" id="" placeholder="Your Message" cols="30" rows="10"></textarea>
+          <input type="submit" value="Send Message" class="btn" />
+        </div>
+      </form>
+    </section>
+    <footer class="footer">
+      <div class="social-icons">
+        <a href="#">
+          <i class="bx bxl-github"></i>
+        </a>
+        <a href="#">
+          <i class="bx bxl-linkedin-square"></i>
+        </a>
+        <a href="#">
+          <i class="bx bxl-instagram-alt"></i>
+        </a>
+        <a href="#">
+          <i class="bx bxl-whatsapp"></i>
+        </a>
+      </div>
+      
+      <ul class="list">
+        <li>
+          <a href="#">FAQ</a>
+        </li>
+        <li>
+          <a href="#">Services</a>
+        </li>
+        <li>
+          <a href="#about">About</a>
+        </li>
+        <li>
+          <a href="#projects">Project</a>
+        </li>
+        <li>
+          <a href="#contact">Contact</a>
+        </li>
+      </ul>
+      <p class="copyright">
+        © Goklu p | All Rights Reserved
+      </p>
+    </footer>
   </body>
 </html>
