--- a/index.html
+++ b/index.html
@@ -37,13 +37,11 @@
         <h1>Hi, It's <span>Gokul</span></h1>
         <h3>I'm a <span>Full Stack Developer</span></h3>
         <p>
-          Lorem ipsum dolor sit amet consectetur adipisicing elit. Sed amet est
-          at blanditiis provident debitis voluptates corrupti a quod doloremque
-          unde, nulla aspernatur libero molestiae non ducimus doloribus rem,
-          corporis eveniet laudantium? Laborum autem voluptas dolor minus quae
-          illum officiis maxime est, impedit rerum ea eos, nesciunt eius nam
-          eveniet numquam, harum sunt. Dolores aperiam quisquam ea fuga optio
-          rem.
+           Student at Error Makes Clever with a passion for creating innovative and functional web applications. In the "About" section, you'll find details about my journey in web development, where I've built a strong foundation in HTML, CSS, Tailwind CSS, and JavaScript.
+
+          My portfolio showcases a range of projects that demonstrate my ability to turn ideas into polished, user-friendly websites and applications. Feel free to explore my work, and if you're interested in collaborating or have any questions, my contact details are provided below.
+          <br>
+          "Let's connect and build something great together!"
         </p>
 
         <div class="social-icons">
@@ -80,12 +78,9 @@
       <div class="about-content">
         <h2>About <span>Me</span></h2>
         <p>
-          Lorem ipsum, dolor sit amet consectetur adipisicing elit. Nihil, odio
-          laudantium minus soluta eaque eum rem sequi possimus fugiat qui facere
-          velit veritatis nesciunt cumque voluptate porro nostrum magni natus
-          incidunt optio itaque dignissimos illo atque! Quos nemo esse similique
-          cum blanditiis inventore commodi sit, iure unde soluta repellat
-          mollitia amet fugit sed nobis ullam eius dolorum id eum consequuntur?
+          I’m Gokul, currently transitioning into a Full Stack Developer role. Though I don't hold a formal degree, I've been committed to improving my skills and knowledge in software development. My journey has been driven by a passion for coding and a dedication to self-learning.
+
+          I've completed two key projects that have significantly enhanced my understanding of web development. I'm proficient in both frontend and backend technologies and am constantly exploring new tools and frameworks.
         </p>
         <a href="" class="btn">Read More</a>
       </div>
@@ -96,28 +91,20 @@
       <div class="projects-box">
         <div class="project-card">
           <img src="image/Screenshot 2024-08-28 145445.png" alt="" />
-          <h3>Project -1</h3>
+          <h3>Greenden Tailwind Css</h3>
           <p>
-            Lorem ipsum dolor sit amet consectetur adipisicing elit. Illum esse
-            maiores saepe veritatis magnam. Blanditiis nihil necessitatibus
-            incidunt, molestias magni iure officiis vitae adipisci provident
-            ullam autem possimus, voluptas perferendis reiciendis, reprehenderit
-            aliquam tenetur. Fugit commodi possimus alias necessitatibus ullam.
+            The project hosted at Greenden Tailwind CSS is a web development project focused on creating a visually appealing and responsive landing page using Tailwind CSS. The design likely emphasizes modern aesthetics, clean layout, and mobile responsiveness, which are key benefits of using Tailwind CSS. This project demonstrates the effective use of Tailwind's utility-first approach to styling, resulting in a streamlined and efficient workflow for creating a polished and professional web page.
           </p>
           <div class="btn">
-            <a href="https://cssgradient.io/">Review Project</a>
+            <a href="https://gokul788.github.io/Greenden-Tailwind-Css/">Review Project</a>
           </div>
         </div>
 
         <div class="project-card">
           <img src="image/Screenshot 2024-08-28 145613.png" alt="" />
-          <h3>Project -1</h3>
+          <h3>Greenden-Tailwind-Css</h3>
           <p>
-            Lorem ipsum dolor sit amet consectetur adipisicing elit. Illum esse
-            maiores saepe veritatis magnam. Blanditiis nihil necessitatibus
-            incidunt, molestias magni iure officiis vitae adipisci provident
-            ullam autem possimus, voluptas perferendis reiciendis, reprehenderit
-            aliquam tenetur. Fugit commodi possimus alias necessitatibus ullam.
+            The project hosted at Greenden Tailwind CSS is a web development project focused on creating a visually appealing and responsive landing page using Tailwind CSS. The design likely emphasizes modern aesthetics, clean layout, and mobile responsiveness, which are key benefits of using Tailwind CSS. This project demonstrates the effective use of Tailwind's utility-first approach to styling, resulting in a streamlined and efficient workflow for creating a polished and professional web page.
           </p>
           <div class="btn">
             <a href="https://cssgradient.io/">Review Project</a>
