--- a/index.html
+++ b/index.html
@@ -15,6 +15,9 @@
     />
     <!--Link js-->
     <script src="function.js" defer></script>
+    <!--google-->
+    <meta name="google-site-verification" content="2FQ1IXhRiAlu5x0vyQyE6X0RdF7bTcwhST235DzwyKM" />
+    
   </head>
   <body>
     <!--Navbar-->
