--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
     <script src="function.js" defer></script>
     <!--google-->
     <meta name="google-site-verification" content="2FQ1IXhRiAlu5x0vyQyE6X0RdF7bTcwhST235DzwyKM" />
-    
+
   </head>
   <body>
     <!--Navbar-->
@@ -53,13 +53,13 @@
         </p>
 
         <div class="social-icons">
-          <a href="#">
+          <a href="https://github.com/Gokul788">
             <i class="bx bxl-github"></i>
           </a>
           <a href="#">
             <i class="bx bxl-linkedin-square"></i>
           </a>
-          <a href="#">
+          <a href="https://www.instagram.com/____goxul__/?next=%2F">
             <i class="bx bxl-instagram-alt"></i>
           </a>
           <a href="#">
@@ -101,7 +101,7 @@
           <img src="image/Screenshot 2024-08-28 145445.png" alt="" />
           <h3>Greenden Tailwind Css</h3>
           <p>
-            The project hosted at Greenden Tailwind CSS is a web development project focused on creating a visually appealing and responsive landing page using Tailwind CSS. The design likely emphasizes modern aesthetics, clean layout, and mobile responsiveness, which are key benefits of using Tailwind CSS. This project demonstrates the effective use of Tailwind's utility-first approach to styling, resulting in a streamlined and efficient workflow for creating a polished and professional web page.
+            The "Greenden-Tailwind-CSS" project showcases a modern, responsive website built using Tailwind CSS. It features clean layouts and efficient styling, demonstrating the flexibility of Tailwind CSS. The site highlights advanced frontend skills with minimal custom CSS.
           </p>
           <div class="btn">
             <a href="https://gokul788.github.io/Greenden-Tailwind-Css/">Review Project</a>
@@ -110,72 +110,56 @@
 
         <div class="project-card">
           <img src="image/Screenshot 2024-08-28 145613.png" alt="" />
-          <h3>Greenden-Tailwind-Css</h3>
+          <h3>Tripadvisor-Website</h3>
           <p>
-            The project hosted at Greenden Tailwind CSS is a web development project focused on creating a visually appealing and responsive landing page using Tailwind CSS. The design likely emphasizes modern aesthetics, clean layout, and mobile responsiveness, which are key benefits of using Tailwind CSS. This project demonstrates the effective use of Tailwind's utility-first approach to styling, resulting in a streamlined and efficient workflow for creating a polished and professional web page.
+            The "Tripadvisor Website" project is a responsive platform for exploring travel destinations and attractions. It features a clean, user-friendly design with sections for destinations, reviews, and user interactions. The site demonstrates skills in HTML, CSS, and JavaScript, offering an organized layout and interactive elements.
           </p>
           <div class="btn">
-            <a href="https://cssgradient.io/">Review Project</a>
+            <a href="https://gokul788.github.io/Tripadvisor-Website/">Review Project</a>
           </div>
         </div>
 
         <div class="project-card">
           <img src="image/Screenshot 2024-08-28 150953.png" alt="" />
-          <h3>Project -1</h3>
+          <h3>Udemy-webpage</h3>
           <p>
-            Lorem ipsum dolor sit amet consectetur adipisicing elit. Illum esse
-            maiores saepe veritatis magnam. Blanditiis nihil necessitatibus
-            incidunt, molestias magni iure officiis vitae adipisci provident
-            ullam autem possimus, voluptas perferendis reiciendis, reprehenderit
-            aliquam tenetur. Fugit commodi possimus alias necessitatibus ullam.
+            The "Udemy-webpage-project-FSWD" is a project that replicates the design and functionality of an educational platform's landing page. It features a clean and organized layout, showcasing courses and other educational content. The project highlights skills in HTML, CSS, and JavaScript, focusing on responsive design and user-friendly navigation.
           </p>
           <div class="btn">
-            <a href="https://cssgradient.io/">Review Project</a>
+            <a href="https://gokul788.github.io/Udemy-webpage-project-FSWD/">Review Project</a>
           </div>
         </div>
 
         <div class="project-card">
           <img src="image/Screenshot 2024-08-28 152335.png" alt="" />
-          <h3>Project -1</h3>
+          <h3>Password-verification</h3>
           <p>
-            Lorem ipsum dolor sit amet consectetur adipisicing elit. Illum esse
-            maiores saepe veritatis magnam. Blanditiis nihil necessitatibus
-            incidunt, molestias magni iure officiis vitae adipisci provident
-            ullam autem possimus, voluptas perferendis reiciendis, reprehenderit
-            aliquam tenetur. Fugit commodi possimus alias necessitatibus ullam.
+            The "password-verification" project is a web application designed to validate and verify password strength. It features a simple and user-friendly interface where users can input passwords to check their security levels. The project demonstrates skills in HTML, CSS, and JavaScript, with a focus on form validation and interactive feedback.
           </p>
           <div class="btn">
-            <a href="https://cssgradient.io/">Review Project</a>
+            <a href="https://gokul788.github.io/password-verification/">Review Project</a>
           </div>
         </div>
 
         <div class="project-card">
           <img src="image/Screenshot 2024-08-28 152446.png" alt="" />
-          <h3>Project -1</h3>
+          <h3>Subscription Page</h3>
           <p>
-            Lorem ipsum dolor sit amet consectetur adipisicing elit. Illum esse
-            maiores saepe veritatis magnam. Blanditiis nihil necessitatibus
-            incidunt, molestias magni iure officiis vitae adipisci provident
-            ullam autem possimus, voluptas perferendis reiciendis, reprehenderit
-            aliquam tenetur. Fugit commodi possimus alias necessitatibus ullam.
+            The "Subscription-FSWD" project is a web page designed to capture user subscriptions through a simple, clean form interface. It highlights skills in HTML, CSS, and JavaScript, focusing on form handling and responsive design. The project ensures a seamless user experience across devices, demonstrating effective frontend development practices.
           </p>
           <div class="btn">
-            <a href="https://cssgradient.io/">Review Project</a>
+            <a href="https://gokul788.github.io/Subscription-FSWD/">Review Project</a>
           </div>
         </div>
 
         <div class="project-card">
           <img src="image/Screenshot 2024-08-28 152557.png" alt="" />
-          <h3>Project -1</h3>
+          <h3>Reestar-webpage</h3>
           <p>
-            Lorem ipsum dolor sit amet consectetur adipisicing elit. Illum esse
-            maiores saepe veritatis magnam. Blanditiis nihil necessitatibus
-            incidunt, molestias magni iure officiis vitae adipisci provident
-            ullam autem possimus, voluptas perferendis reiciendis, reprehenderit
-            aliquam tenetur. Fugit commodi possimus alias necessitatibus ullam.
+            The "FSWD-Reestar-webpage-project" is a responsive web page that showcases a product or service with a modern design. It features organized sections for information, highlighting effective use of HTML, CSS, and JavaScript. The project emphasizes clean layouts and a user-friendly interface, demonstrating strong frontend development skills.
           </p>
           <div class="btn">
-            <a href="https://cssgradient.io/">Review Project</a>
+            <a href="https://gokul788.github.io/FSWD-Reestar-webpage-project/">Review Project</a>
           </div>
         </div>
       </div>
@@ -203,13 +187,13 @@
     </section>
     <footer class="footer">
       <div class="social-icons">
-        <a href="#">
+        <a href="https://github.com/Gokul788">
           <i class="bx bxl-github"></i>
         </a>
         <a href="#">
           <i class="bx bxl-linkedin-square"></i>
         </a>
-        <a href="#">
+        <a href="https://www.instagram.com/____goxul__/?next=%2F">
           <i class="bx bxl-instagram-alt"></i>
         </a>
         <a href="#">
